# Flask-TailwindCSS-HTMX-Sample-Project

./: LICENSE  Makefile  README.md  app.py  pyproject.toml  tailwind.config.js
static/css/: main.css
templates/: index.html
